# opengl-engine

./: .cproject  .gitignore  .gitmodules  .project  :w  CMakeLists.txt  README.md  build.sh  imgui.ini
Core/: CMakeLists.txt  build.sh
Core/res/atlases/: testing.atlas
Core/res/shader/instanced/: vert.glsl
Core/src/core/: corepch.cpp
Core/src/core/components/: components.h
Core/src/core/engine/: engine.cpp  engine.h  engineData.h  scene.cpp  scene.h
Core/src/core/entity/: entity.h
Core/src/core/serialization/: json-serializable.h  serializer.h
Core/src/primitives/: quad.cpp  quad.h
Core/src/renderer/: basicRenderer2d.h  framebuffer.cpp  geometry.cpp  geometry.h  orthoCamera.cpp  orthoCamera.h  region.h  renderer2D.h  renderer2D_v2.cpp  renderer2D_v2.h  shader.cpp  shader.h  texture.cpp  texture.h  textureAtlas.cpp
Core/src/util/: console.h  cppUtil.h  fileUtil.h  geometryUtil.hpp  log.h  mathUtil.h  random.h  resourceManager.h
Core/src/window/: inputData.h  window.cpp  window.h  windowData.h
Editor/: CMakeLists.txt  build.sh  firefly_engine_logo_vector.icns  imgui.ini  test_macos_icon.icns
Editor/res/: editor-state.json
Editor/res/editor/: editor-state.json
Editor/res/shader/base/: vert.glsl
Editor/src/: editorState.h  editorWindow.cpp  editorWindow.h  main.cpp
Editor/src/editor/: editorLayer.cpp  editorLayer.h  imguiControlsBarPanel.hpp  imguiDebugPanel.hpp  imguiFileManagerPanel.hpp  imguiLogPanel.hpp  imguiMenuPanel.hpp  imguiPreferencesPanel.hpp  imguiPropertiesPanel.hpp  imguiResourcesPanel.hpp  imguiSceneHeirarchyPanel.hpp  imguiScriptEditorPanel.hpp  imguiSignalsPanel.hpp  imguiViewportPanel.hpp
Editor/src/filesystem/: fileDialogs.h  macosFileDialogs.cpp
res/atlases/: player_anim.atlas  testYaml.yaml
res/devel/: test.atlas
res/engine_files/: engine.json
res/scenes/: test.fscn
res/shader/experimental/: frag.glsl  vert.glsl
res/shader/instanced/: frag.glsl  vert.glsl
res/textures/atlas_test/: testing.atlas
src/: corepch.h  main.cpp  registry.h
src/components/: components.h
src/engine/: engine.cpp  engine.h  engineData.h  imguilayer.h  scene.cpp  scene.h
src/event/: eventSystem.cpp  eventSystem.h  events.h
src/framework/: game.h
src/game/: game.h  testGame.cpp  testGame.h
src/game_object/: gameObject.cpp  gameObject.h
src/gameobject/: entity.h
src/render_data/: geometry.cpp  geometry.h  material.h  region.h  shader.cpp  shader.h  texture.cpp  texture.h  textureAtlas.cpp  textureAtlas.h  vertex.h  vertexbuffer.h
src/renderer/: basicRenderer2d.cpp  basicRenderer2d.h  batch.cpp  batch.h  framebuffer.cpp  framebuffer.h  instancedRenderer.cpp  instancedRenderer.h  orthoCamera.cpp  orthoCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  renderer2D.h
src/serializer/: serializable.h
src/test/: test.cpp  test.h  testClearColor.cpp  testClearColor.h  testGame.cpp  testGame.h  testShaderDev.cpp  testShaderDev.h  testTriangle.cpp  testTriangle.h
src/util/: fileUtil.h  geometryUtil.hpp  glUtil.h  log.h  mathUtil.h  randomUtil.h  resourceManager.h  stringUtil.h
src/window/: inputData.h  window.cpp  window.h  windowData.h
